2017-10-11  Roland Winkler  <winkler@gnu.org>
	* configure.ac: Use it.
	* lisp/bbdb.el: Mention new mailing list bbdb-user@nongnu.org.

2017-10-11  Roland Winkler  <winkler@gnu.org>
	* lisp/bbdb.el (bbdb-parse-records): Query before migrating BBDB
	to new format.
	(bbdb-delete-record-internal, bbdb-insert-record-internal)
	(bbdb-overwrite-record-internal): Barf if buffer is read-only.

2017-10-11  Roland Winkler  <winkler@gnu.org>
	* lisp/bbdb-com.el (bbdb-search, bbdb-split-maybe): Fix docstring.
	(bbdb-read-record): Fix calling sequence for calls to set record.

2017-08-09  Roland Winkler  <winkler@gnu.org>
	* lisp/bbdb-migrate.el (bbdb-migrate-uuid-xfield): New variable.

2017-08-09  Roland Winkler  <winkler@gnu.org>
	New field uuid.  Make creation-date and timestamp immutable.
	* lisp/bbdb.el (bbdb-create-hook, bbdb-change-hook): Use
	defcustom.
	(bbdb-merge-records-function): New variable.
	(bbdb-layout-alist): Omit uuid.
	(bbdb-xfields-sort-order, bbdb-merge-xfield-function-alist):
	Ignore creation-date and timestamp.
	(bbdb-file-format): Bump to 9.
	(bbdb-record-type): Include uuid, creation-date and timestamp.
	(bbdb-uuid-table): New variable.
	(bbdb-timestamp, bbdb-creation-date): Declare obsolete.
	(bbdb-uuid): New function.
	(bbdb-hash-record): Hash uuid.
	(bbdb-record-field, bbdb-record-set-field, bbdb-buffer)
	(bbdb-display-record-one-line, bbdb-display-record-multi-line)
	(bbdb-display-record): Handle uuid, creation-date and timestamp.
	(bbdb-change-record): Use uuid.
	* lisp/bbdb-com.el (bbdb-search): Use keywords for args.  Handle
	uuid, creation-date and timestamp.  New option :bool.
	(bbdb, bbdb-search-name, bbdb-search-organization)
	(bbdb-search-address, bbdb-search-mail, bbdb-search-phone)
	(bbdb-search-xfields, bbdb-mail-aliases, bbdb-get-mail-aliases):
	Change accordingly.
	(bbdb-compare-records): Compare any fields.
	(bbdb-timestamp-older, bbdb-timestamp-newer, bbdb-creation-older)
	(bbdb-creation-newer): Fix interactive spec.